<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/default_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/invite_mente_mapview"
                android:scaleType="fitXY"/>

            <com.drava.android.ui.DravaTextView
                android:id="@+id/txt_invite_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="25dp"
                android:gravity="center_horizontal"
                android:text="@string/invite_mentees_description"
                android:textSize="12sp" />

            <com.drava.android.ui.DravaTextView
                android:id="@+id/txt_congratulation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/congratulations"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/congratulation_color"/>

            <com.drava.android.ui.DravaTextView
                android:id="@+id/txt_your_almost_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:gravity="center_horizontal"
                android:text="@string/your_almost_done"
                android:textSize="12sp" />

            <com.drava.android.ui.DravaTextView
                android:id="@+id/txt_invite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/referral_bg"
                android:text="@string/str_invite_mentor"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:layout_marginBottom="37dp"/>

            <com.drava.android.ui.DravaTextView
                android:id="@+id/txt_mentor_you_invite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/mentor_you_invite"
                android:textColor="@color/color_black"
                android:textSize="12sp"
                android:paddingBottom="8dp"/>

            <com.drava.android.ui.DravaTextView
                android:id="@+id/txt_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="17dp"
                android:paddingRight="17dp"
                android:drawablePadding="8dp"
                android:text="@string/link_seamlessly_to_multiple_mentees"
                android:textSize="14sp"
                android:drawableLeft="@drawable/take_a_stand"/>

            <com.drava.android.ui.DravaTextView
                android:id="@+id/txt_see_driving"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="17dp"
                android:paddingRight="17dp"
                android:drawablePadding="15dp"
                android:text="@string/see_driving_expections"
                android:textSize="14sp"
                android:drawableLeft="@drawable/see_driving_section"/>

            <com.drava.android.ui.DravaTextView
                android:id="@+id/txt_get_notified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="17dp"
                android:paddingRight="17dp"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/get_notification"
                android:text="@string/get_notified"
                android:textSize="14sp"/>

            <com.drava.android.ui.DravaTextView
                android:id="@+id/txt_view_scores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="17dp"
                android:paddingRight="17dp"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/view_driver_score"
                android:text="@string/view_driver_scores"
                android:textSize="14sp"/>

            <com.drava.android.ui.DravaTextView
                android:id="@+id/txt_view_trips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="17dp"
                android:paddingRight="17dp"
                android:drawablePadding="15dp"
                android:text="@string/view_trips_taken"
                android:drawableLeft="@drawable/view_trip_taken"
                android:textSize="14sp"
                android:layout_marginBottom="30dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>