<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_gradient">

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/img_drava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/img_logo"
            android:src="@drawable/logo_drava"/>


        <com.drava.android.ui.DravaTextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txt_get_started"
            android:layout_centerHorizontal="true"
            android:layout_margin="25dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <com.drava.android.ui.DravaTextView
            android:id="@+id/txt_get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txt_already_login"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/get_started_bg"
            android:paddingBottom="8dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="8dp"
            android:text="@string/get_started"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.drava.android.ui.DravaTextView
            android:id="@+id/txt_already_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pagesContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="45dp"
            android:text="@string/str_by_using"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <com.drava.android.ui.DravaTextView
            android:id="@+id/txt_login"
            android:layout_toRightOf="@id/txt_already_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pagesContainer"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="45dp"
            android:text="@string/str_login"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="gone"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_above="@id/pagesContainer"
            android:layout_centerInParent="true">

            <com.drava.android.ui.DravaTextView
                android:id="@+id/txt_terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/str_terms_of_use"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <com.drava.android.ui.DravaTextView
                android:id="@+id/txt_private_policy"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_toRightOf="@id/txt_terms_of_use"
                android:text="@string/str_privacy_policy"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/pagesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"/>

    </RelativeLayout>

</LinearLayout>
